--- a/index..html
+++ b/index..html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="title" content="Christian Benedict A. Ramirez">
+  <meta name="description" content="Porfolio website of Christian Benedict A. Ramirez, an aspiring Front-end Web Developer.">
+  <meta name="keywords" content="Christian Benedict A. Ramirez, Front-end, Developer, Website, Portfolio, xtianbar, xtian, @xtianbar, @_xtianbar">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Christian Benedict A. Ramirez">
+
+  <title>Christian Benedict A. Ramirez</title>
 </head>
 <body>
   
