install tailwind css

--- a/index..html
+++ b/index..html
@@ -10,9 +10,13 @@
   <meta name="robots" content="index, follow">
   <meta name="author" content="Christian Benedict A. Ramirez">
 
+  <link rel="stylesheet" href="assets/css/style.css">
+
   <title>Christian Benedict A. Ramirez</title>
 </head>
 <body>
-  
+  <h1 class="text-3xl font-bold underline p-20">
+    Hello world!
+  </h1>
 </body>
 </html>
