--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
 
+  <!-- icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/fontawesome.min.css" integrity="sha512-SgaqKKxJDQ/tAUAAXzvxZz33rmn7leYDYfBP+YoMRSENhf3zJyx3SBASt/OfeQwBHA1nxMis7mM3EV/oYT6Fdw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <title>Christian Benedict A. Ramirez</title>
 
 </head>
-<body class="font-open text-mostly-black">
+<body id="home" class="font-open text-mostly-black">
    
-  <nav class="px-10 py-5 border-b bg-gray-bg">
+  <nav class="fixed top-0 z-50 w-full bg-white px-10 py-2 border-b">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="" class="flex items-center justify-center">
         <img src="./assets/images/logo/xtianbar-logo.png" class="h-7 mr-3" alt="xtianbar Logo" />
@@ -43,35 +47,167 @@
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
       <ul class="font-medium flex flex-col p-4 text-base md:text-[1.125rem] md:p-0 mt-4 md:flex-row md:space-x-7 md:mt-0">
         <li>
-          <a href="#home" class="block py-2 pl-3 pr-4 font-bold hover:text-blu" aria-current="page">Home</a>
+          <a href="#home" class="block py-2 pl-3 pr-4 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-blu hover:decoration-2" aria-current="page">Home</a>
         </li>
         <li>
-          <a href="#about" class="block py-2 pl-3 pr-4 hover:text-blu" >About</a>
+          <a href="#about" class="block py-2 pl-3 pr-4 hover:underline hover:underline-offset-[0.425rem] hover:decoration-blu hover:decoration-2" >About</a>
         </li>
         <li>
-          <a href="#projects" class="block py-2 pl-3 pr-4 hover:text-blu" >Projects</a>
+          <a href="#projects" class="block py-2 pl-3 pr-4 hover:underline hover:underline-offset-[0.425rem] hover:decoration-blu hover:decoration-2" >Projects</a>
         </li>
         <li>
-          <a href="#contact" class="block py-2 pl-3 pr-4 hover:text-blu" >Contact</a>
+          <a href="#contact" class="block py-2 pl-3 pr-4 hover:underline hover:underline-offset-[0.425rem] hover:decoration-blu hover:decoration-2" >Contact</a>
         </li>
       </ul>
     </div>
   </div>
   </nav>
 
-  <main class="w-full px-14 py-10">
-    <section class="py-10 flex flex-col md:flex-row">
-      <div>
-        <img class="w-[500px]" src="./assets/images/header/xtianbar-hero.png">
-        <h1>Hi, I'm <span>Christian Benedict</span>. An aspiring <span>Front-end Web Developer</span> 
-        from the Philippines.</h1>
+  <main>
+    
+    <!-- hero section -->
+    <section class="w-full px-14 py-10 bg-gray-bg pt-32">
+
+      <div class="absolute right-4">
+        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="130" viewBox="0 0 40 150" fill="none">
+          <circle cx="3.14704" cy="147.794" r="2.20588" transform="rotate(-90 3.14704 147.794)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="134.559" r="2.20588" transform="rotate(-90 3.14704 134.559)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="121.324" r="2.20588" transform="rotate(-90 3.14704 121.324)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="108.088" r="2.20588" transform="rotate(-90 3.14704 108.088)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="94.853" r="2.20588" transform="rotate(-90 3.14704 94.853)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="81.6177" r="2.20588" transform="rotate(-90 3.14704 81.6177)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="68.3823" r="2.20588" transform="rotate(-90 3.14704 68.3823)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="55.1471" r="2.20588" transform="rotate(-90 3.14704 55.1471)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="41.9118" r="2.20588" transform="rotate(-90 3.14704 41.9118)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="28.6765" r="2.20588" transform="rotate(-90 3.14704 28.6765)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="15.4412" r="2.20588" transform="rotate(-90 3.14704 15.4412)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="2.20586" r="2.20588" transform="rotate(-90 3.14704 2.20586)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="147.794" r="2.20588" transform="rotate(-90 16.3824 147.794)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="134.559" r="2.20588" transform="rotate(-90 16.3824 134.559)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="121.324" r="2.20588" transform="rotate(-90 16.3824 121.324)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="108.088" r="2.20588" transform="rotate(-90 16.3824 108.088)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="94.853" r="2.20588" transform="rotate(-90 16.3824 94.853)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="81.6177" r="2.20588" transform="rotate(-90 16.3824 81.6177)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="68.3823" r="2.20588" transform="rotate(-90 16.3824 68.3823)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="55.1471" r="2.20588" transform="rotate(-90 16.3824 55.1471)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="41.9118" r="2.20588" transform="rotate(-90 16.3824 41.9118)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="28.6765" r="2.20588" transform="rotate(-90 16.3824 28.6765)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="15.4412" r="2.20588" transform="rotate(-90 16.3824 15.4412)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="2.20586" r="2.20588" transform="rotate(-90 16.3824 2.20586)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="147.794" r="2.20588" transform="rotate(-90 29.6177 147.794)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="134.559" r="2.20588" transform="rotate(-90 29.6177 134.559)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="121.324" r="2.20588" transform="rotate(-90 29.6177 121.324)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="108.088" r="2.20588" transform="rotate(-90 29.6177 108.088)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="94.853" r="2.20588" transform="rotate(-90 29.6177 94.853)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="81.6177" r="2.20588" transform="rotate(-90 29.6177 81.6177)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="68.3823" r="2.20588" transform="rotate(-90 29.6177 68.3823)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="55.1471" r="2.20588" transform="rotate(-90 29.6177 55.1471)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="41.9118" r="2.20588" transform="rotate(-90 29.6177 41.9118)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="28.6765" r="2.20588" transform="rotate(-90 29.6177 28.6765)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="15.4412" r="2.20588" transform="rotate(-90 29.6177 15.4412)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="2.20586" r="2.20588" transform="rotate(-90 29.6177 2.20586)" fill="#558AC8"/>
+        </svg>
       </div>
-      <div>
-        <img class="w-[500px]" src="./assets/images/header/xtianbar-hero.png">
+      <!-- Section: Design Block -->
+      <section class="mb-40 overflow-hidden">
+
+        <!-- Jumbotron -->
+        <div class="px-6 py-12 text-center md:px-12 lg:py-24 lg:text-left">
+          <div class="w-100 mx-auto text-neutral-800 sm:max-w-2xl md:max-w-3xl lg:max-w-5xl xl:max-w-7xl">
+            <div class="grid justify-center items-center gap-12 lg:grid-cols-2">
+              <div class="mt-[-1rem] md:mt-0 flex flex-col justify-center items-center" style="z-index: 10">
+                <img class="w-[500px] md:mt-[-10rem]" src="./assets/images/header/xtianbar-hero.png">
+                <div class="flex flex-col items-center justify-center lg:justify-start lg:items-start gap-4">
+                  <h1 class="px-14 md:mt-[-6rem] z-30 text-lg">
+                  Hi, I'm <span class="font-bold">Christian Benedict</span>. 
+                  An aspiring 
+                  <span class="text-blu font-bold underline underline-offset-[0.425rem] decoration-mostly-black decoration-2">Front-end Web Developer</span>
+                  from the Philippines.</h1>
+                  <div>
+                    <a href="#" class="hover:text-light-blu px-1"><i class="fa-brands fa-linkedin text-2xl"></i></a>
+                    <a href="#" class="hover:text-light-blu px-1"><i class="fa-brands fa-square-github text-2xl"></i></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="relative mb-12 lg:mb-0 pr-5">
+                <img src="./assets/images/materials/IMG_20230516_211137_415.jpg" alt="xtian">
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <!-- Jumbotron -->
+      </section>
+      <!-- Section: Design Block -->
+
+      <div class="absolute left-3">
+        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="130" viewBox="0 0 40 150" fill="none">
+          <circle cx="3.14704" cy="147.794" r="2.20588" transform="rotate(-90 3.14704 147.794)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="134.559" r="2.20588" transform="rotate(-90 3.14704 134.559)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="121.324" r="2.20588" transform="rotate(-90 3.14704 121.324)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="108.088" r="2.20588" transform="rotate(-90 3.14704 108.088)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="94.853" r="2.20588" transform="rotate(-90 3.14704 94.853)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="81.6177" r="2.20588" transform="rotate(-90 3.14704 81.6177)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="68.3823" r="2.20588" transform="rotate(-90 3.14704 68.3823)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="55.1471" r="2.20588" transform="rotate(-90 3.14704 55.1471)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="41.9118" r="2.20588" transform="rotate(-90 3.14704 41.9118)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="28.6765" r="2.20588" transform="rotate(-90 3.14704 28.6765)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="15.4412" r="2.20588" transform="rotate(-90 3.14704 15.4412)" fill="#558AC8"/>
+          <circle cx="3.14704" cy="2.20586" r="2.20588" transform="rotate(-90 3.14704 2.20586)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="147.794" r="2.20588" transform="rotate(-90 16.3824 147.794)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="134.559" r="2.20588" transform="rotate(-90 16.3824 134.559)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="121.324" r="2.20588" transform="rotate(-90 16.3824 121.324)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="108.088" r="2.20588" transform="rotate(-90 16.3824 108.088)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="94.853" r="2.20588" transform="rotate(-90 16.3824 94.853)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="81.6177" r="2.20588" transform="rotate(-90 16.3824 81.6177)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="68.3823" r="2.20588" transform="rotate(-90 16.3824 68.3823)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="55.1471" r="2.20588" transform="rotate(-90 16.3824 55.1471)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="41.9118" r="2.20588" transform="rotate(-90 16.3824 41.9118)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="28.6765" r="2.20588" transform="rotate(-90 16.3824 28.6765)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="15.4412" r="2.20588" transform="rotate(-90 16.3824 15.4412)" fill="#558AC8"/>
+          <circle cx="16.3824" cy="2.20586" r="2.20588" transform="rotate(-90 16.3824 2.20586)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="147.794" r="2.20588" transform="rotate(-90 29.6177 147.794)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="134.559" r="2.20588" transform="rotate(-90 29.6177 134.559)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="121.324" r="2.20588" transform="rotate(-90 29.6177 121.324)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="108.088" r="2.20588" transform="rotate(-90 29.6177 108.088)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="94.853" r="2.20588" transform="rotate(-90 29.6177 94.853)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="81.6177" r="2.20588" transform="rotate(-90 29.6177 81.6177)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="68.3823" r="2.20588" transform="rotate(-90 29.6177 68.3823)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="55.1471" r="2.20588" transform="rotate(-90 29.6177 55.1471)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="41.9118" r="2.20588" transform="rotate(-90 29.6177 41.9118)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="28.6765" r="2.20588" transform="rotate(-90 29.6177 28.6765)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="15.4412" r="2.20588" transform="rotate(-90 29.6177 15.4412)" fill="#558AC8"/>
+          <circle cx="29.6177" cy="2.20586" r="2.20588" transform="rotate(-90 29.6177 2.20586)" fill="#558AC8"/>
+        </svg>
+      </div>
+
+    </section>
+
+    <!-- skills section -->
+    <section class="w-full px-24 py-10">
+      <div class="px-14 py-12 md:px-12 lg:py-24 lg:text-left">
+        <h2>Skills</h2>
+      </div>
+    </section>
+
+    <!-- projects section -->
+    <section class="w-full px-24 py-10">
+      <div class="px-14 py-12 md:px-12 lg:py-24 lg:text-left">
+        <h2>Projects</h2>
+      </div>
+    </section>
+
+    <!-- contact section -->
+    <section class="w-full px-24 py-10">
+      <div class="px-14 py-12 md:px-12 lg:py-24 lg:text-left">
+        <h2>Contact</h2>
       </div>
     </section>
 
   </main>
+  <!-- icons / css -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
 
 </body>
