--- a/index.html
+++ b/index.html
@@ -668,28 +668,28 @@
             <!-- Col -->
             <div class="w-full lg:w-8/12 p-5 rounded-lg lg:rounded-l-none">
               <h3 class="pt-4 text-lg text-center font-semibold">Let&apos;s start <span class="text-blu underline underline-offset-2 decoration-2">working</span> together. Hit me up!</h3>
-              <form class="px-8 pt-6 pb-8 mb-4">
+              <form name="talk-to-me" class="px-8 pt-6 pb-8 mb-4">
                   <div class="mb-4">
                     <label class="hidden mb-2 text-sm font-bold text-gray-700" for="name">
                       Name
                     </label>
-                    <input id="name" type="text" placeholder="Name" rows="4" class="w-full px-3 py-2 mb-3 text-sm leading-tight text-mostly-black border shadow appearance-none focus:outline-none focus:shadow-outline"/>
+                    <input id="name" name="name" type="text" placeholder="Name" rows="4" class="w-full px-3 py-2 mb-3 text-sm leading-tight text-mostly-black border shadow appearance-none focus:outline-none focus:shadow-outline"/>
                   </div>
                   <div class="mb-4">
                     <label class="hidden mb-2 text-sm font-bold text-gray-700" for="email">
                       Email
                     </label>
-                    <input id="email" type="email" placeholder="Email" rows="4" class="w-full px-3 py-2 mb-3 text-sm leading-tight text-mostly-black border shadow appearance-none focus:outline-none focus:shadow-outline">
+                    <input id="email" name="email" type="email" placeholder="Email" rows="4" class="w-full px-3 py-2 mb-3 text-sm leading-tight text-mostly-black border shadow appearance-none focus:outline-none focus:shadow-outline">
                   </div>
                 <div class="mb-4">
                   <label class="hidden mb-2 text-sm font-bold text-gray-700" for="email">
                     Message
                   </label>
-                  <textarea id="message" type="text" placeholder="Message" rows="4" class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border shadow appearance-none focus:outline-none focus:shadow-outline"></textarea>
+                  <textarea id="message" name="message" type="text" placeholder="Message" rows="4" class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border shadow appearance-none focus:outline-none focus:shadow-outline"></textarea>
                 </div>
 
                 <div class="mb-6 text-center">
-                  <button class="w-full px-4 py-2 font-bold text-white !bg-blu hover:!bg-light-blu focus:outline-none focus:shadow-outline" type="button">
+                  <button class="w-full px-4 py-2 font-bold text-white !bg-blu hover:!bg-light-blu focus:outline-none focus:shadow-outline" type="submit">
                     Send Message
                   </button>
                 </div>
