added download cv

--- a/index.html
+++ b/index.html
@@ -722,12 +722,18 @@
 
                 </div>
 
+                <div class="col-lg-12 d-flex justify-content-center flex-column section-bg">
+                  <div class="text-center mt-5">
+                    <a class="hover:text-blu hover:underline decoration-gray-500 underline-offset-[0.3rem] decoration-2" href="./assets/download/Ramirez, Christian Benedict A..pdf" target="_blank" content="application/pdf">Ramirez, Christian Benedict A. Ramirez.pdf <i class="fa-regular fa-file-pdf"></i></a>
+                  </div>
+                </div>
+
               </form>
             </div>
 
             <!-- Col -->
             <div class="relative w-full h-auto hidden lg:block lg:w-4/12 bg-cover rounded-r-lg" style="background-image: url('./assets/images/materials/map.png')">
-              <span class="absolute top-[57%] left-[42%]">
+              <span class="absolute top-[56%] left-[44.5%]">
                 <a href="https://goo.gl/maps/G3E3qH18Wm5yu3pe9" target="_blank"><i class="text-red-500 text-3xl fa-solid fa-location-dot"></i></a>
               </span>
             </div>
