--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="title" content="Christian Benedict A. Ramirez">
   <meta name="description" content="Porfolio website of Christian Benedict A. Ramirez, an aspiring Front-end Web Developer.">
-  <meta name="keywords" content="Christian Benedict A. Ramirez, Front-end, Developer, Website, Portfolio, xtianbar, xtian, @xtianbar, @_xtianbar">
+  <meta name="keywords" content="Christian Benedict A. Ramirez, Front-end, Web Developer, Front-end Developer, Developer, Website, Portfolio, xtianbar, xtian, @xtianbar, @_xtianbar">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Christian Benedict A. Ramirez">
 
