--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <!-- END OF BACK TO TOP -->
 
-  <nav class="fixed top-0 z-50 w-full bg-white px-4 md:px-6 lg:px-10 py-2 border-b">
+  <nav class="fixed top-0 z-50 w-full bg-white sm:px-4 md:px-6 px-10 py-2 border-b">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="" class="flex items-center justify-center">
         <img src="./assets/images/logo/xtianbar-logo.png" class="h-7 mr-3" alt="xtianbar Logo" />
@@ -111,7 +111,7 @@
   <main>
     
     <!-- hero section -->
-    <section class="w-full px-2 md:px-6 lg:px-14 py-4 md:py-10 bg-gray-bg pt-14 md:pt-22 lg:pt-32">
+    <section class="w-full sm:px-2 md:px-6 px-14 py-4 md:py-10 bg-gray-bg sm:pt-14 md:pt-22 pt-32">
 
       <div class="absolute right-4">
         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="130" viewBox="0 0 40 150" fill="none">
