--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <main>
     
     <!-- hero section -->
-    <section class="w-full sm:px-2 md:px-6 px-14 py-4 md:py-10 bg-gray-bg sm:pt-14 md:pt-22 pt-32">
+    <section class="w-full sm:px-2 md:px-6 lg:px-14 py-4 md:py-10 bg-gray-bg lg:pt-32 sm:pt-14 md:pt-32">
 
       <div class="absolute right-4">
         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="130" viewBox="0 0 40 150" fill="none">
