add link for crawlers

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
 
   <!-- icons -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/fontawesome.min.css" integrity="sha512-SgaqKKxJDQ/tAUAAXzvxZz33rmn7leYDYfBP+YoMRSENhf3zJyx3SBASt/OfeQwBHA1nxMis7mM3EV/oYT6Fdw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <title>Christian Benedict A. Ramirez</title>
@@ -79,7 +78,7 @@
 
   <nav class="fixed top-0 z-50 w-full bg-white sm:px-4 md:px-6 px-10 py-2 border-b">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="" class="flex items-center justify-center">
+    <a href="https://xtianbar.vercel.app/" class="flex items-center justify-center">
         <img src="./assets/images/logo/xtianbar-logo.png" class="h-7 mr-3" alt="xtianbar Logo" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap hidden">xtianbar.dev</span>
     </a>
@@ -750,7 +749,7 @@
   <footer class="w-full md:px-24 bg-blu bg-opacity-[52%]">
       <div class="px-4 lg:px-14 py-8 md:px-12 lg:text-left">
         <div class="sm:flex sm:items-center sm:justify-between">
-          <span class="text-sm text-gray-500 sm:text-center">© 2023 <a href="" class="hover:underline hover:underline-offset-4">Christian Benedict A. Ramirez™</a>. All Rights Reserved.
+          <span class="text-sm text-gray-500 sm:text-center">© 2023 <a href="https://xtianbar.vercel.app/" class="hover:underline hover:underline-offset-4">Christian Benedict A. Ramirez™</a>. All Rights Reserved.
           </span>
           <div class="flex mt-4 space-x-5 sm:justify-center sm:mt-0">
               <a href="https://www.facebook.com/extianbar/" target="_blank" class="text-gray-500 hover:text-mostly-black">
