add links for crawlers

--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                   <span class="text-blu font-bold underline underline-offset-[0.425rem] decoration-mostly-black decoration-2">Front-end Web Developer</span>
                   from the Philippines.</h1>
                   <div>
-                    <a href="#" class="hover:text-light-blu px-1"><i class="fa-brands fa-linkedin text-2xl"></i></a>
-                    <a href="#" class="hover:text-light-blu px-1"><i class="fa-brands fa-square-github text-2xl"></i></a>
+                    <a href="https://www.linkedin.com/in/xtianbar/" class="hover:text-light-blu px-1"><i class="fa-brands fa-linkedin text-2xl"></i></a>
+                    <a href="https://github.com/xtianbar" class="hover:text-light-blu px-1"><i class="fa-brands fa-square-github text-2xl"></i></a>
                   </div>
                 </div>
               </div>
