--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
       <ul class="font-medium flex flex-col p-4 text-base md:text-[1.125rem] md:p-0 mt-4 md:flex-row md:space-x-7 md:mt-0">
         <li>
-          <a href="#home" class="block py-2 pl-3 pr-4 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-blu hover:decoration-2" aria-current="page">Home</a>
+          <a href="#home" aria-label="Home Section" class="block py-2 pl-3 pr-4 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-blu hover:decoration-2" aria-current="page">Home</a>
         </li>
         <li>
-          <a href="#about" class="block py-2 pl-3 pr-4 hover:underline hover:underline-offset-[0.425rem] hover:decoration-blu hover:decoration-2" >About</a>
+          <a href="#about" aria-label="About me Section" class="block py-2 pl-3 pr-4 hover:underline hover:underline-offset-[0.425rem] hover:decoration-blu hover:decoration-2" >About</a>
         </li>
         <li>
-          <a href="#projects" class="block py-2 pl-3 pr-4 hover:underline hover:underline-offset-[0.425rem] hover:decoration-blu hover:decoration-2" >Projects</a>
+          <a href="#projects" aria-label="Projects Section" class="block py-2 pl-3 pr-4 hover:underline hover:underline-offset-[0.425rem] hover:decoration-blu hover:decoration-2" >Projects</a>
         </li>
         <li>
-          <a href="#contact" class="block py-2 pl-3 pr-4 hover:underline hover:underline-offset-[0.425rem] hover:decoration-blu hover:decoration-2" >Contact</a>
+          <a href="#contact" aria-label="Contact Section" class="block py-2 pl-3 pr-4 hover:underline hover:underline-offset-[0.425rem] hover:decoration-blu hover:decoration-2" >Contact</a>
         </li>
       </ul>
     </div>
@@ -167,15 +167,15 @@
                   An aspiring 
                   <span class="text-blu font-bold underline underline-offset-[0.425rem] decoration-mostly-black decoration-2">Front-end Web Developer</span>
                   from the Philippines.</h1>
-                  <div>
-                    <a href="https://www.linkedin.com/in/xtianbar/" class="hover:text-light-blu px-1"><i class="fa-brands fa-linkedin text-2xl"></i></a>
-                    <a href="https://github.com/xtianbar" class="hover:text-light-blu px-1"><i class="fa-brands fa-square-github text-2xl"></i></a>
+                  <div class="m-0 p-0">
+                    <a href="https://www.linkedin.com/in/xtianbar/" target="_blank" aria-label="Linkedin Account" class="hover:text-light-blu px-1"><i class="fa-brands fa-linkedin text-2xl"></i></a>
+                    <a href="https://github.com/xtianbar" target="_blank" aria-label="Github Account" class="hover:text-light-blu px-1"><i class="fa-brands fa-square-github text-2xl"></i></a>
                   </div>
                 </div>
               </div>
 
               <div class="relative mb-12 lg:mb-0 px-5">
-                <img src="./assets/images/materials/IMG_20230516_211137_415.webp" alt="xtian">
+                <img src="./assets/images/materials/IMG_20230516_211137_415.jpg" alt="xtian">
               </div>
 
             </div>
@@ -733,7 +733,7 @@
             <!-- Col -->
             <div class="relative w-full h-auto hidden lg:block lg:w-4/12 bg-cover rounded-r-lg" style="background-image: url('./assets/images/materials/map.webp')">
               <span class="absolute top-[56%] left-[44.5%]">
-                <a href="https://goo.gl/maps/G3E3qH18Wm5yu3pe9" target="_blank"><i class="text-red-500 text-3xl fa-solid fa-location-dot"></i></a>
+                <a href="https://goo.gl/maps/G3E3qH18Wm5yu3pe9" aria-label="map location" target="_blank"><i class="text-red-500 text-3xl fa-solid fa-location-dot"></i></a>
               </span>
             </div>
           </div>
