change color for contrast

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 
   <main>
     
-    <!-- hero section mobile -->
-    <section class="block md:hidden w-full px-2 bg-gray-bg pt-20">
+    <!-- hero section -->
+    <section class="w-full px-14 py-10 bg-gray-bg pt-32">
 
       <div class="absolute right-4">
         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="130" viewBox="0 0 40 150" fill="none">
@@ -153,122 +153,7 @@
         </svg>
       </div>
       <!-- Section: Design Block -->
-      <section class="mb-40 overflow-hidden">
-
-        <!-- Jumbotron -->
-        <div class="px-2 py-12 text-center md:px-12 lg:py-24 lg:text-left">
-          <div class="w-100 mx-auto text-neutral-800 sm:max-w-2xl md:max-w-3xl lg:max-w-5xl xl:max-w-7xl">
-            <div class="grid justify-center items-center gap-12 lg:grid-cols-2">
-              <div class="mt-[-1rem] md:mt-0 flex flex-col justify-center items-center" style="z-index: 10">
-                <img class="w-[500px] md:mt-[-10rem]" src="./assets/images/header/xtianbar-hero.png" alt="logo">
-                <div class="flex flex-col items-center justify-center lg:justify-start lg:items-start gap-4 mb-8">
-                  <h1 class="px-14 md:mt-[-6rem] z-30 text-2xl">
-                  Hi, I'm <span class="font-bold">Christian Benedict</span>. 
-                  An aspiring 
-                  <span class="text-blu font-bold underline underline-offset-[0.425rem] decoration-mostly-black decoration-2">Front-end Web Developer</span>
-                  from the Philippines.</h1>
-                  <div class="m-0 p-0">
-                    <a href="https://www.linkedin.com/in/xtianbar/" target="_blank" aria-label="Linkedin Account" class="hover:text-light-blu px-1"><i class="fa-brands fa-linkedin text-2xl"></i></a>
-                    <a href="https://github.com/xtianbar" target="_blank" aria-label="Github Account" class="hover:text-light-blu px-1"><i class="fa-brands fa-square-github text-2xl"></i></a>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-        <!-- Jumbotron -->
-      </section>
-      <!-- Section: Design Block -->
-
-      <div class="absolute left-3">
-        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="130" viewBox="0 0 40 150" fill="none">
-          <circle cx="3.14704" cy="147.794" r="2.20588" transform="rotate(-90 3.14704 147.794)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="134.559" r="2.20588" transform="rotate(-90 3.14704 134.559)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="121.324" r="2.20588" transform="rotate(-90 3.14704 121.324)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="108.088" r="2.20588" transform="rotate(-90 3.14704 108.088)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="94.853" r="2.20588" transform="rotate(-90 3.14704 94.853)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="81.6177" r="2.20588" transform="rotate(-90 3.14704 81.6177)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="68.3823" r="2.20588" transform="rotate(-90 3.14704 68.3823)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="55.1471" r="2.20588" transform="rotate(-90 3.14704 55.1471)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="41.9118" r="2.20588" transform="rotate(-90 3.14704 41.9118)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="28.6765" r="2.20588" transform="rotate(-90 3.14704 28.6765)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="15.4412" r="2.20588" transform="rotate(-90 3.14704 15.4412)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="2.20586" r="2.20588" transform="rotate(-90 3.14704 2.20586)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="147.794" r="2.20588" transform="rotate(-90 16.3824 147.794)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="134.559" r="2.20588" transform="rotate(-90 16.3824 134.559)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="121.324" r="2.20588" transform="rotate(-90 16.3824 121.324)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="108.088" r="2.20588" transform="rotate(-90 16.3824 108.088)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="94.853" r="2.20588" transform="rotate(-90 16.3824 94.853)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="81.6177" r="2.20588" transform="rotate(-90 16.3824 81.6177)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="68.3823" r="2.20588" transform="rotate(-90 16.3824 68.3823)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="55.1471" r="2.20588" transform="rotate(-90 16.3824 55.1471)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="41.9118" r="2.20588" transform="rotate(-90 16.3824 41.9118)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="28.6765" r="2.20588" transform="rotate(-90 16.3824 28.6765)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="15.4412" r="2.20588" transform="rotate(-90 16.3824 15.4412)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="2.20586" r="2.20588" transform="rotate(-90 16.3824 2.20586)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="147.794" r="2.20588" transform="rotate(-90 29.6177 147.794)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="134.559" r="2.20588" transform="rotate(-90 29.6177 134.559)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="121.324" r="2.20588" transform="rotate(-90 29.6177 121.324)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="108.088" r="2.20588" transform="rotate(-90 29.6177 108.088)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="94.853" r="2.20588" transform="rotate(-90 29.6177 94.853)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="81.6177" r="2.20588" transform="rotate(-90 29.6177 81.6177)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="68.3823" r="2.20588" transform="rotate(-90 29.6177 68.3823)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="55.1471" r="2.20588" transform="rotate(-90 29.6177 55.1471)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="41.9118" r="2.20588" transform="rotate(-90 29.6177 41.9118)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="28.6765" r="2.20588" transform="rotate(-90 29.6177 28.6765)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="15.4412" r="2.20588" transform="rotate(-90 29.6177 15.4412)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="2.20586" r="2.20588" transform="rotate(-90 29.6177 2.20586)" fill="#558AC8"/>
-        </svg>
-      </div>
-      <span id="about"></span>
-    </section>
-
-    <!-- hero section md+ -->
-    <section class="hidden md:block w-full px-14 py-10 bg-gray-bg pt-32">
-
-      <div class="absolute right-4">
-        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="130" viewBox="0 0 40 150" fill="none">
-          <circle cx="3.14704" cy="147.794" r="2.20588" transform="rotate(-90 3.14704 147.794)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="134.559" r="2.20588" transform="rotate(-90 3.14704 134.559)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="121.324" r="2.20588" transform="rotate(-90 3.14704 121.324)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="108.088" r="2.20588" transform="rotate(-90 3.14704 108.088)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="94.853" r="2.20588" transform="rotate(-90 3.14704 94.853)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="81.6177" r="2.20588" transform="rotate(-90 3.14704 81.6177)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="68.3823" r="2.20588" transform="rotate(-90 3.14704 68.3823)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="55.1471" r="2.20588" transform="rotate(-90 3.14704 55.1471)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="41.9118" r="2.20588" transform="rotate(-90 3.14704 41.9118)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="28.6765" r="2.20588" transform="rotate(-90 3.14704 28.6765)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="15.4412" r="2.20588" transform="rotate(-90 3.14704 15.4412)" fill="#558AC8"/>
-          <circle cx="3.14704" cy="2.20586" r="2.20588" transform="rotate(-90 3.14704 2.20586)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="147.794" r="2.20588" transform="rotate(-90 16.3824 147.794)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="134.559" r="2.20588" transform="rotate(-90 16.3824 134.559)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="121.324" r="2.20588" transform="rotate(-90 16.3824 121.324)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="108.088" r="2.20588" transform="rotate(-90 16.3824 108.088)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="94.853" r="2.20588" transform="rotate(-90 16.3824 94.853)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="81.6177" r="2.20588" transform="rotate(-90 16.3824 81.6177)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="68.3823" r="2.20588" transform="rotate(-90 16.3824 68.3823)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="55.1471" r="2.20588" transform="rotate(-90 16.3824 55.1471)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="41.9118" r="2.20588" transform="rotate(-90 16.3824 41.9118)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="28.6765" r="2.20588" transform="rotate(-90 16.3824 28.6765)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="15.4412" r="2.20588" transform="rotate(-90 16.3824 15.4412)" fill="#558AC8"/>
-          <circle cx="16.3824" cy="2.20586" r="2.20588" transform="rotate(-90 16.3824 2.20586)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="147.794" r="2.20588" transform="rotate(-90 29.6177 147.794)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="134.559" r="2.20588" transform="rotate(-90 29.6177 134.559)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="121.324" r="2.20588" transform="rotate(-90 29.6177 121.324)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="108.088" r="2.20588" transform="rotate(-90 29.6177 108.088)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="94.853" r="2.20588" transform="rotate(-90 29.6177 94.853)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="81.6177" r="2.20588" transform="rotate(-90 29.6177 81.6177)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="68.3823" r="2.20588" transform="rotate(-90 29.6177 68.3823)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="55.1471" r="2.20588" transform="rotate(-90 29.6177 55.1471)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="41.9118" r="2.20588" transform="rotate(-90 29.6177 41.9118)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="28.6765" r="2.20588" transform="rotate(-90 29.6177 28.6765)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="15.4412" r="2.20588" transform="rotate(-90 29.6177 15.4412)" fill="#558AC8"/>
-          <circle cx="29.6177" cy="2.20586" r="2.20588" transform="rotate(-90 29.6177 2.20586)" fill="#558AC8"/>
-        </svg>
-      </div>
-      <!-- Section: Design Block -->
-      <section class="mb-40 overflow-hidden">
+      <section class="mb-4 overflow-hidden">
 
         <!-- Jumbotron -->
         <div class="px-6 py-12 text-center md:px-12 lg:py-24 lg:text-left">
