--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta name="keywords" content="Christian Benedict A. Ramirez, Front-end, Web Developer, Front-end Developer, Developer, Website, Portfolio, xtianbar, xtian, @xtianbar, @_xtianbar">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Christian Benedict A. Ramirez">
-
+  <meta name="google-site-verification" content="VrUXcrWZ5R36WDRDgl1UDIkB3G12D92J4WknBmc41J8" />
+  
   <!-- favicon -->
   <link href="./assets/images/logo/favicon.ico" rel="icon">
   <link href="./assets/images/logo/favicon.ico" rel="apple-touch-icon">
